tmp/devops-kubernetes-vault/deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
    component: vault
    role: services
spec:
#   type: LoadBalancer

  ports:
  - name: http

    port: 8200

    targetPort: 8200
  selector:
    app: vault
    component: vault
    role: services
